Improve project structure

--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -14,6 +14,6 @@
    </ion-header>
 
    <div class="page-container">
-      <app-analytics-page></app-analytics-page>
+      <app-settings-page-view></app-settings-page-view>
    </div>
 </ion-content>
