--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,6 @@
 <div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+   <strong>{{ name }}</strong>
+   <p>Explore <a target="_blank" rel="noopener noreferrer"
+                 href="https://ionicframework.com/docs/components">UI
+      Components</a></p>
 </div>
