--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -4,15 +4,15 @@
          <ion-icon name="home"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="tab2">
+      <ion-tab-button tab="rooms">
          <ion-icon name="list"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="tab3">
+      <ion-tab-button tab="analytics">
          <ion-icon name="pulse"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="tab4">
+      <ion-tab-button tab="settings">
          <ion-icon name="settings"></ion-icon>
       </ion-tab-button>
    </ion-tab-bar>
