--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
    <ion-toolbar>
       <ion-title>
-         {{pageTitle}}
+         <div class="pt-2">Ivan's</div>
+         <div>Smart home</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
