--- a/src/app/pages/home-page/page-view/home-page-view.component.scss
+++ b/src/app/pages/home-page/page-view/home-page-view.component.scss
@@ -1,10 +1,11 @@
 .quick-status-text {
-   font-size: xx-large;
+   font-size: x-large;
    color: #3f51b5;
 }
 
 .refresh-icon {
    padding-left: 10px;
+   font-size: 20px;
 }
 
 .section-wrapper {
