--- a/src/app/pages/rooms-page/rooms-page.component.html
+++ b/src/app/pages/rooms-page/rooms-page.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
    <ion-toolbar>
       <ion-title>
-         Rooms
+         <div class="pt-2">Rooms</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
@@ -9,12 +9,11 @@
 <ion-content [fullscreen]="true">
    <ion-header collapse="condense">
       <ion-toolbar>
-         <ion-title size="large">Tab 2</ion-title>
+         <ion-title size="large">Rooms</ion-title>
       </ion-toolbar>
    </ion-header>
 
    <div class="page-container">
       <app-rooms-page></app-rooms-page>
    </div>
-   <!--  <app-explore-container name="Tab 2 page"></app-explore-container>-->
 </ion-content>
