--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
    <ion-toolbar>
       <ion-title>
-         {{pageTitle}}
+         <div class="pt-2">{{pageTitle}}</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
