--- a/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
+++ b/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
@@ -1,3 +1,5 @@
 <div id="container">
-  <strong>TODO: Rooms page goes here</strong>
+   <div *ngFor="let roomData of roomsData$ | async">
+      <app-room-card [roomData]="roomData"></app-room-card>
+   </div>
 </div>
