Add more room card dataa

--- a/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
+++ b/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
@@ -1,5 +1,6 @@
 <div id="container">
-   <div *ngFor="let roomData of roomsData$ | async">
-      <app-room-card [roomData]="roomData"></app-room-card>
+   <div *ngFor="let roomData of roomsData$ | async" class="room-data-card">
+      <app-room-card [roomData]="roomData">
+      </app-room-card>
    </div>
 </div>
