--- a/src/app/pages/rooms-page/rooms-page.component.html
+++ b/src/app/pages/rooms-page/rooms-page.component.html
@@ -1,18 +1,12 @@
 <ion-header [translucent]="true">
    <ion-toolbar>
       <ion-title>
-         <div class="pt-2">Rooms</div>
+         <div>Rooms</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-   <ion-header collapse="condense">
-      <ion-toolbar>
-         <ion-title size="large">Rooms</ion-title>
-      </ion-toolbar>
-   </ion-header>
-
    <div class="page-container">
       <app-rooms-page></app-rooms-page>
    </div>
