--- a/src/app/pages/rooms-page/room-card/room-card.component.scss
+++ b/src/app/pages/rooms-page/room-card/room-card.component.scss
@@ -1,4 +1,3 @@
-
 .room-name {
    padding-left: 1rem;
    font-size: larger;
@@ -13,16 +12,22 @@
 .room-statistics {
    padding-top: 5px;
    color: #6c757d;
-   display: inline-block;
+   text-align: left;
 }
 
 .room-header {
    text-align: left;
    padding-left: 10px;
+   width: 19rem;
 }
 
 .room-stat {
    padding-left: 0.5rem;
+}
+
+.room-image {
+   width: 24px;
+   height: 24px;
 }
 
 .room-wrapper {
