--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,19 +1,13 @@
 <ion-header [translucent]="true">
    <ion-toolbar>
       <ion-title>
-         <div class="pt-2">Ivan's</div>
+         <div>Ivan's</div>
          <div>Smart home</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-   <ion-header collapse="condense">
-      <ion-toolbar>
-         <ion-title size="large">{{pageTitle}}</ion-title>
-      </ion-toolbar>
-   </ion-header>
-
    <div class="page-container">
       <app-home-page-view></app-home-page-view>
    </div>
