Add users; nav bar color update

--- a/src/app/pages/settings-page/page-view/settings-page-view.component.html
+++ b/src/app/pages/settings-page/page-view/settings-page-view.component.html
@@ -11,6 +11,25 @@
       </mat-card-header>
    </mat-card>
 
+   <mat-card class="example-card">
+      <mat-card-header class="centered-header">
+         <div mat-card-avatar><img class="avatar-image"
+                                   src="../../../../assets/avatars/user-1.png"
+                                   alt="User's photo"/></div>
+         <mat-card-title>Milen Milev</mat-card-title>
+         <mat-card-subtitle>User</mat-card-subtitle>
+      </mat-card-header>
+   </mat-card>
+
+   <mat-card class="example-card">
+      <mat-card-header class="centered-header">
+         <div mat-card-avatar><img class="avatar-image"
+                                   src="../../../../assets/avatars/guest-1.png"
+                                   alt="Guest's photo"/></div>
+         <mat-card-title>Iva Ivanova</mat-card-title>
+         <mat-card-subtitle>Guest</mat-card-subtitle>
+      </mat-card-header>
+   </mat-card>
 </div>
 
 <mat-divider></mat-divider>
