Add power usage chart and apex library dependency

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -2,8 +2,8 @@
 ion-app {
    ion-title {
       div {
-         font-size: larger;
          text-align: center;
+         padding-bottom: 5px;
       }
    }
 }
