--- a/src/app/pages/analytics-page/page-view/analytics-page-view.component.html
+++ b/src/app/pages/analytics-page/page-view/analytics-page-view.component.html
@@ -1,3 +1,15 @@
 <div id="container">
-   <strong>TODO: Analytics page goes here</strong>
+   <div class="power-usage-description-wrapper">
+      <div>
+         <span class="power-usage-text">Power usage</span>
+         <span class="material-icons helper-icon">info_outline</span>
+         <span class="material-icons more-icon">more_vert</span>
+      </div>
+
+      <div class="consumption-text">{{totalMoney}} &euro; ~ {{totalElectricity}}
+         kWh
+      </div>
+   </div>
+
+   <app-power-usage-chart></app-power-usage-chart>
 </div>
