--- a/src/app/pages/analytics-page/page-view/analytics-page-view.component.html
+++ b/src/app/pages/analytics-page/page-view/analytics-page-view.component.html
@@ -10,6 +10,14 @@
          kWh
       </div>
    </div>
-
    <app-power-usage-chart></app-power-usage-chart>
+
+   <mat-divider class="charts-divider"></mat-divider>
+
+   <div class="trends-description-wrapper">
+      <span class="power-usage-text">Trends</span>
+      <span class="material-icons helper-icon">info_outline</span>
+      <span class="material-icons more-icon">more_vert</span>
+   </div>
+   <app-usage-trends-chart></app-usage-trends-chart>
 </div>
