Update room icons

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
    <ion-toolbar>
       <ion-title>
          <div>Ivan's</div>
-         <div>Smart home</div>
+         <div>Home</div>
       </ion-title>
    </ion-toolbar>
 </ion-header>
