--- a/src/app/pages/rooms-page/room-card/room-card.component.html
+++ b/src/app/pages/rooms-page/room-card/room-card.component.html
@@ -7,25 +7,25 @@
    <div class="room-statistics">
       <div class="inline-block room-stat">
          <img class="small-icon"
-              [src]="'./assets/app-icons/temperature-icon.svg'"
+              [src]="'./assets/app-icons/temperature-icon.png'"
               alt="Temperature icon">
          {{roomData.temperature}} &ordm;C
       </div>
       <div class="inline-block room-stat">
          <img class="small-icon"
-              [src]="'./assets/app-icons/water-drop.svg'"
+              [src]="'./assets/app-icons/water-drop-icon.png'"
               alt="Water drop">
          {{roomData.humidity}}%
       </div>
       <div class="inline-block room-stat">
          <img class="small-icon"
-              [src]="'../../../../assets/app-icons/electricity-icon.svg'"
+              [src]="'../../../../assets/app-icons/electricity-icon.png'"
               alt="Electricity icon">
          {{roomData.electricity}} kWh
       </div>
       <div class="inline-block room-stat">
          <img class="small-icon"
-              [src]="'./assets/app-icons/lamp-icon.svg'"
+              [src]="'./assets/app-icons/lamp-icon.png'"
               alt="Electricity icon">
          {{roomData.lampPower}} lm
       </div>
