Add room edit page with simple functionality

--- a/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
+++ b/src/app/pages/rooms-page/page-view/rooms-page-view.component.html
@@ -1,6 +1,7 @@
 <div id="container">
    <div *ngFor="let roomData of roomsData$ | async" class="room-data-card">
-      <app-room-card [roomData]="roomData">
+      <app-room-card [roomData]="roomData"
+                     [routerLink]="['edit', roomData.id]">
       </app-room-card>
    </div>
 </div>
