--- a/src/app/pages/rooms-page/room-card/room-card.component.html
+++ b/src/app/pages/rooms-page/room-card/room-card.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="inline-block room-stat">
          <img class="small-icon"
-              [src]="'../../../../assets/app-icons/electricity-icon.png'"
+              [src]="'./assets/app-icons/electricity-icon.png'"
               alt="Electricity icon">
          {{roomData.electricity}} kWh
       </div>
