--- a/src/app/pages/rooms-page/edit-room-preferences/edit-room-preferences.component.scss
+++ b/src/app/pages/rooms-page/edit-room-preferences/edit-room-preferences.component.scss
@@ -1,13 +1,39 @@
+.room-image-container {
+   background-color: black;
+   margin: auto;
+
+   img {
+      opacity: 0.5;
+   }
+}
+
+ion-title {
+   text-align: center;
+}
+
+.room-image-container {
+   width: 350px;
+   margin-bottom: 1.5rem;
+}
+
 .close-button {
    cursor: pointer;
+   margin-top: -5px;
+   width: 30px;
+   height: 30px;
+   float: right;
 }
 
 mat-slider {
-   width: 250px;
+   width: 210px;
 }
 
 .mat-divider {
    margin: 2rem 10%;
+}
+
+.hot-temp-icon, .cold-temp-icon, .lamp-icon {
+   color: var(--ion-color-primary);
 }
 
 .edit-preferences-header {
@@ -15,8 +41,20 @@ mat-slider {
    font-size: larger;
    padding-bottom: 2rem;
 
+   .inline-block {
+      width: 115px;
+      text-align: left;
+   }
+
    .header-value {
-      padding-left: 4rem;
+      display: inline-block;
+      width: 80px;
       color: var(--ion-color-dark);
    }
+}
+
+.small-icon {
+   width: 24px;
+   height: 24px;
+   opacity: 50%;
 }
