--- a/src/app/pages/settings-page/page-view/settings-page-view.component.html
+++ b/src/app/pages/settings-page/page-view/settings-page-view.component.html
@@ -4,7 +4,7 @@
    <mat-card class="example-card">
       <mat-card-header class="centered-header">
          <div mat-card-avatar><img class="avatar-image"
-                                   src="../../../../assets/avatars/home-owner.png"
+                                   src="./assets/avatars/home-owner.png"
                                    alt="Owner's photo"/></div>
          <mat-card-title>Ivan Ivanov</mat-card-title>
          <mat-card-subtitle>Owner</mat-card-subtitle>
@@ -14,7 +14,7 @@
    <mat-card class="example-card">
       <mat-card-header class="centered-header">
          <div mat-card-avatar><img class="avatar-image"
-                                   src="../../../../assets/avatars/user-1.png"
+                                   src="./assets/avatars/user-1.png"
                                    alt="User's photo"/></div>
          <mat-card-title>Milen Milev</mat-card-title>
          <mat-card-subtitle>User</mat-card-subtitle>
@@ -24,7 +24,7 @@
    <mat-card class="example-card">
       <mat-card-header class="centered-header">
          <div mat-card-avatar><img class="avatar-image"
-                                   src="../../../../assets/avatars/guest-1.png"
+                                   src="./assets/avatars/guest-1.png"
                                    alt="Guest's photo"/></div>
          <mat-card-title>Iva Ivanova</mat-card-title>
          <mat-card-subtitle>Guest</mat-card-subtitle>
