Scroller fixed add opacity toggle

--- a/src/app/pages/rooms-page/edit-room-preferences/edit-room-preferences.component.html
+++ b/src/app/pages/rooms-page/edit-room-preferences/edit-room-preferences.component.html
@@ -14,7 +14,8 @@
 <ion-content [fullscreen]="true">
    <div class="page-container">
       <div class="room-image-container">
-         <img [src]="room.imagePath"
+         <img [ngStyle]="{ opacity: (room.lampPower / 150) }"
+              [src]="room.imagePath"
               alt="Room image">
       </div>
       <div>
