--- a/src/app/pages/analytics-page/analytics-page.component.html
+++ b/src/app/pages/analytics-page/analytics-page.component.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-   <div class="page-container">
+   <div class="page-container analytics-container">
       <app-analytics-page></app-analytics-page>
    </div>
 </ion-content>
