--- a/src/app/pages/settings-page/page-view/settings-page-view.component.scss
+++ b/src/app/pages/settings-page/page-view/settings-page-view.component.scss
@@ -6,12 +6,17 @@
    color: #6c757d;
 }
 
+.page-container {
+   padding-top: 1rem !important;
+}
+
 .mat-divider {
    margin-left: 10%;
    margin-right: 10%;
 }
 
 .page-title {
+   margin-top: 1rem;
    font-size: x-large;
    color: #3f51b5;
    width: 240px;
